--- a/app/templates/signup.html
+++ b/app/templates/signup.html
@@ -7,14 +7,15 @@
   <title>login page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-    <div class="logo">
-        
-      <a href="/"><img src="{{ url_for('static', filename='images/k2.png')}}"  alt="img" style="max-width: 300px; max-height: 300px"></img></a>
+  <div class="logo">
 
-    </div>
+    <a href="/"><img src="{{ url_for('static', filename='images/k2.png')}}" alt="img"
+        style="max-width: 300px; max-height: 300px"></img></a>
+
+  </div>
 
 
-  </head>
+</head>
 
 <body>
   <!-- Section: Design Block -->
@@ -36,19 +37,21 @@
         <div class="row d-flex justify-content-center">
           <div class="col-lg-8">
             <h2 class="fw-bold mb-5">Patient registration form </h2>
-<!-- ##form tag starts -->
+            <!-- ##form tag starts -->
             <form action="signup" method="post">
               <!-- 2 column grid layout with text inputs for the first and last names -->
               <div class="row">
                 <div class="col-md-6 mb-4">
                   <div class="form-outline">
-                    <input type="text" id="iname" name="fname" class="form-control" />
+                    <input type="text" id="fname" name="fname" class="form-control" pattern="[A-Za-z]{1,20}"
+                      title="only alphabets are allowed " />
                     <label class="form-label" for="fname">First name</label>
                   </div>
                 </div>
                 <div class="col-md-6 mb-4">
                   <div class="form-outline">
-                    <input type="text" id="iname" name="lname" class="form-control" />
+                    <input type="text" id="lname" name="lname" class="form-control" pattern="[A-Za-z]{1,20}"
+                      title="only alphabets are allowed" />
                     <label class="form-label" for="lname">Last name</label>
                   </div>
                 </div>
@@ -56,8 +59,8 @@
 
               <!-- Email input -->
               <div class="form-outline mb-4">
-                <input type="email" id="email" name="email" class="form-control" />
                 <label class="form-label" for="email">Email address</label>
+                <input type="email" id="email" name="email" class="form-control"  pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"/>
               </div>
 
               <div class="form-outline mb-4">
@@ -86,9 +89,9 @@
               <div class="form-outline mb-4">
 
                 <label for="birthday">Patient Date Of Birth :</label> <br>
-                <input type="date" id="birthday" name="birthday">
-
-              </div>
+                <input type="date" id="birthday" name="birthday" placeholder="dd-mm-yyyy" value="" min="1950-01-01"
+                  max="2023-12-31">
+               
 
               <div class="form-outline mb-4">
 
