--- a/app/templates/table.html
+++ b/app/templates/table.html
@@ -56,7 +56,7 @@
             </table>
           </td>
           <td>
-            <table class="myTable" width="100%" border="2 solid">
+            <table class="myTable" width="100%" border="2 solid" pattern="[0-3]{1}">
               <tr>
                 <td>0 </td>
               </tr>
@@ -130,7 +130,7 @@
             </select> -->
             <div>
               <label>input 0/1/2</label>
-              <input type="number" id="2pp" name="2pp" />
+              <input type="number" id="2pp" name="2pp" pattern="[0-2]{1}"/>
             </td>
           </tr>
           <!-- 3rd para -->
@@ -156,7 +156,7 @@
               </table>
             </td>
             <td>
-          <table class="myTable" width="100%" border="2 solid">
+          <table class="myTable" width="100%" border="2 solid" pattern="[0-1]{1}">
             <tr>
               <td>0 </td>
             </tr>
@@ -207,7 +207,7 @@
           </table>
         </td>
         <td>
-          <table class="myTable" width="100%" height="100%" border="2 solid">
+          <table class="myTable" width="100%" height="100%" border="2 solid" pattern="[0-3]{1}">
             <tr>
               <td>0 </td>
             </tr>
@@ -257,7 +257,7 @@
           </table>
         </td>
         <td>
-          <table class="myTable" width="100%" height="100%" border="2 solid">
+          <table class="myTable" width="100%" height="100%" border="2 solid" pattern="[0-1]{1}">
             <tr>
               <td>0 </td>
             </tr>
@@ -299,7 +299,7 @@
           </table>
         </td>
         <td>
-          <table class="myTable" width="100%" height="100%" border="2 solid">
+          <table class="myTable" width="100%" height="100%" border="2 solid" pattern="[0-1]{1}">
             <tr>
               <td>0 </td>
             </tr>
