--- a/app/templates/result.html
+++ b/app/templates/result.html
@@ -12,7 +12,7 @@ j
 {% block body %}
 
 
-<h2>Final Results</h2>
+<h2>Final Results:</h2><br><br><br>
 
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
@@ -27,10 +27,10 @@ j
         <h2>PIN code:{{ PIN }}</h2>
         <br>
     </div> -->
-    <h2>patient id :{{id}}</h2>
-    <h2>{{ bio() }}</h2>
+    <h2>patient id :{{id}}</h2><br>
+    <h2>{{ bio() }}</h2><br>
    <h3>
-       as score is:{{sc}} <br>
+       As your score is:{{sc}} <br>
        result :{{ result }} <br>
     </h3>
 <br>
